--- a/docker/docker-compose/templates/docker-compose.nvlamp.windows.yml
+++ b/docker/docker-compose/templates/docker-compose.nvlamp.windows.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 
 services:
 ################ Web Stack.
@@ -53,10 +53,11 @@ services:
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${APACHE_TRAEFIK_PORT}"
         - "traefik.protocol=${APACHE_TRAEFIK_PROTOCOL}"
+        - "traefik.backend.loadbalancer.method=drr"
         - "traefik.frontend.rule=Host:${APACHE_MPM_TRAEFIK_HOST}"
         environment:
             USE_ONLY_CONFIGS: ${APACHE_USE_ONLY_CONFIGS}
@@ -79,9 +80,10 @@ services:
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${NGINX_TRAEFIK_PORT}"
+        - "traefik.frontend.entryPoints=${NGINX_TRAEFIK_PROTOCOL}"
         - "traefik.protocol=${NGINX_TRAEFIK_PROTOCOL}"
         - "traefik.frontend.rule=Host:${NGINX_TRAEFIK_HOST}"
         environment:
@@ -114,10 +116,11 @@ services:
         container_name: "${PROJECT_NAME}-varnish"
         image: akhomy/alpine-varnish:${VARNISH_TAG}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${VARNISH_TRAEFIK_PORT}"
         - "traefik.protocol=${VARNISH_TRAEFIK_PROTOCOL}"
+        - "traefik.backend.loadbalancer.method=drr"
         - "traefik.frontend.rule=Host:${VARNISH_TRAEFIK_HOST}"
         environment:
             DEBUG: ${VARNISH_DEBUG}
@@ -144,10 +147,11 @@ services:
         container_name: "${PROJECT_NAME}-mailhog"
         image: mailhog/mailhog:${MAILHOG_TAG}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${MAILHOG_TRAEFIK_PORT}"
         - "traefik.protocol=${MAILHOG_TRAEFIK_PROTOCOL}"
+        - "traefik.backend.loadbalancer.method=drr"
         - "traefik.frontend.rule=Host:${MAILHOG_TRAEFIK_HOST}"
         networks:
             0_proxy: {}
@@ -160,10 +164,11 @@ services:
         container_name: "${PROJECT_NAME}-ngrok"
         image: akhomy/alpine-ngrok:${NGROK_TAG}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${NGROK_TRAEFIK_PORT}"
         - "traefik.protocol=${NGROK_TRAEFIK_PROTOCOL}"
+        - "traefik.backend.loadbalancer.method=drr"
         - "traefik.frontend.rule=Host:${NGROK_TRAEFIK_HOST}"
         environment:
             ARGS: ${NGROK_ARGS}
@@ -196,10 +201,11 @@ services:
         container_name: "${PROJECT_NAME}-phpmyadmin"
         image: phpmyadmin/phpmyadmin:${PHPMYADMIN_TAG}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${PHPMYADMIN_TRAEFIK_PORT}"
         - "traefik.protocol=${PHPMYADMIN_TRAEFIK_PROTOCOL}"
+        - "traefik.backend.loadbalancer.method=drr"
         - "traefik.frontend.rule=Host:${PHPMYADMIN_TRAEFIK_HOST}"
         environment:
             PMA_HOST: ${PMA_HOST}
@@ -226,8 +232,6 @@ networks:
     external:
         name: ${PROXY_NETWORK}
   1_internal:
-    driver_opts:
-      1_internal: "true"
     driver: bridge
   2_shared:
     driver: bridge
