--- a/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
+++ b/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
@@ -54,7 +54,7 @@ services:
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${APACHE_TRAEFIK_PORT}"
         - "traefik.protocol=${APACHE_TRAEFIK_PROTOCOL}"
@@ -80,7 +80,7 @@ services:
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
-        - "traefik.docker.network=${PROJECT_NAME}"
+        - "traefik.docker.network=${PROXY_NETWORK}"
         - "traefik.enable=true"
         - "traefik.port=${NGINX_TRAEFIK_PORT}"
         - "traefik.protocol=${NGINX_TRAEFIK_PROTOCOL}"
@@ -167,7 +167,7 @@ networks:
             name: ${PROXY_NETWORK}
     1_internal:
         driver_opts:
-        1_internal: "true"
+            internal: "true"
         driver: bridge
     2_shared:
         driver: bridge
